project(skia_osmand)

include("../../common.cmake")

set(ROOT "${OSMAND_ROOT}/externals/skia")
set(UPSTREAM "${ROOT}/upstream.patched")
include_directories(AFTER SYSTEM
	"${UPSTREAM}/src/c"
	"${UPSTREAM}/src/core"
	"${UPSTREAM}/src/codec"
	"${UPSTREAM}/src/config"
	"${UPSTREAM}/src/effects"
    "${UPSTREAM}/src/effects/gradients"
	"${UPSTREAM}/src/fonts"
	"${UPSTREAM}/src/image"
	"${UPSTREAM}/src/images"
	"${UPSTREAM}/src/lazy"
	"${UPSTREAM}/src/ports"
    "${UPSTREAM}/src/sksl"
	"${UPSTREAM}/src/utils"
	"${UPSTREAM}/src/xml"
	"${UPSTREAM}/src/sfnt"
	"${UPSTREAM}/src/gpu"
	"${UPSTREAM}/src/opts"
    "${UPSTREAM}/src/pathops"
    "${UPSTREAM}/include/android"
	"${UPSTREAM}/include/c"
	"${UPSTREAM}/include/core"
	"${UPSTREAM}/include/codec"
	"${UPSTREAM}/include/lazy"
	"${UPSTREAM}/include/utils/mac"
	"${UPSTREAM}/include/utils/win"
	"${UPSTREAM}/include/pathops"
	"${UPSTREAM}/include/private"
	"${UPSTREAM}/include/config"
	"${UPSTREAM}/include/effects"
	"${UPSTREAM}/include/images"
	"${UPSTREAM}/include/pipe"
	"${UPSTREAM}/include/ports"
	"${UPSTREAM}/include/utils"
	"${UPSTREAM}/include/xml"
	"${UPSTREAM}/include/gpu"
	"${UPSTREAM}/include/gpu/gl"
	"${UPSTREAM}/third_party/externals/expat/lib"
	"${UPSTREAM}/third_party/externals/freetype/include"
	"${UPSTREAM}/third_party/etc1"
	"${UPSTREAM}/third_party/gif"
	"${UPSTREAM}/third_party/externals/libjpeg-turbo"
	"${UPSTREAM}/third_party/libpng"
)
add_definitions(-DSK_RELEASE -DSK_IGNORE_ETC1_SUPPORT -DSK_HAS_JPEG_LIBRARY -DSK_HAS_PNG_LIBRARY -DSK_SUPPORT_GPU=1)
set(target_specific_sources
	"${UPSTREAM}/src/opts/SkBitmapProcState_opts_none.cpp"
	"${UPSTREAM}/src/opts/SkBlitMask_opts_none.cpp"
	"${UPSTREAM}/src/opts/SkBlitRow_opts_none.cpp"
)

if(CMAKE_TARGET_OS STREQUAL "darwin")
	file(GLOB src_utils_mac "${UPSTREAM}/src/utils/mac/*")
        set(target_specific_sources "${target_specific_sources}"
       #          "${UPSTREAM}/src/fonts/SkFontMgr_fontconfig.cpp"
                "${UPSTREAM}/src/ports/SkDebug_stdio.cpp"
       #       "${UPSTREAM}/src/ports/SkFontConfigInterface_direct.cpp"
       #       "${UPSTREAM}/src/ports/SkFontHost_fontconfig.cpp"
       #       "${UPSTREAM}/src/ports/SkFontHost_FreeType_common.cpp"
       #        "${UPSTREAM}/src/ports/SkFontHost_FreeType.cpp"
       #        "${UPSTREAM}/src/ports/SkFontHost_linux.cpp"
			"${UPSTREAM}/src/ports/SkFontHost_mac.cpp"
       		"${UPSTREAM}/src/ports/SkOSFile_posix.cpp"
        	"${UPSTREAM}/src/ports/SkTLS_pthread.cpp"
        	"${UPSTREAM}/src/utils/SkThreadUtils_pthread.cpp"
			${src_utils_mac}
        )
        add_definitions(-DSK_BUILD_FOR_MACOS -DSK_USE_POSIX_THREADS   -DSK_FONTHOST_USES_FONTMGR)
endif()

if(CMAKE_TARGET_OS STREQUAL "linux")
	set(target_specific_sources "${target_specific_sources}"
		"${UPSTREAM}/src/fonts/SkFontMgr_fontconfig.cpp"
		"${UPSTREAM}/src/ports/SkDebug_stdio.cpp"
		"${UPSTREAM}/src/ports/SkFontConfigInterface_direct.cpp"
		"${UPSTREAM}/src/ports/SkFontHost_fontconfig.cpp"
		"${UPSTREAM}/src/ports/SkFontHost_FreeType_common.cpp"
		"${UPSTREAM}/src/ports/SkFontHost_FreeType.cpp"
		"${UPSTREAM}/src/ports/SkFontHost_linux.cpp"
		"${UPSTREAM}/src/ports/SkOSFile_posix.cpp"
		"${UPSTREAM}/src/ports/SkTime_Unix.cpp"
		"${UPSTREAM}/src/ports/SkTLS_pthread.cpp"
		"${UPSTREAM}/src/utils/SkThreadUtils_pthread.cpp"
		"${UPSTREAM}/src/utils/SkThreadUtils_pthread_linux.cpp"
	)
	add_definitions(-DSK_BUILD_FOR_UNIX -DSK_USE_POSIX_THREADS)
endif()

if(CMAKE_TARGET_OS STREQUAL "windows")
	set(target_specific_sources "${target_specific_sources}"
		"${UPSTREAM}/src/fonts/SkFontMgr_indirect.cpp"
		"${UPSTREAM}/src/ports/SkDebug_win.cpp"
		"${UPSTREAM}/src/ports/SkOSFile_win.cpp"
		"${UPSTREAM}/src/ports/SkTime_win.cpp"
		"${UPSTREAM}/src/ports/SkTLS_win.cpp"
		"${UPSTREAM}/src/utils/SkThreadUtils_win.cpp"
		"${UPSTREAM}/src/utils/win/SkAutoCoInitialize.cpp"
		"${UPSTREAM}/src/utils/win/SkHRESULT.cpp"
		"${UPSTREAM}/src/utils/win/SkIStream.cpp"
		"${UPSTREAM}/src/ports/SkFontHost_win.cpp"
		"${UPSTREAM}/src/ports/SkFontMgr_default_gdi.cpp"
	)
	add_definitions(
		-DSK_BUILD_FOR_WIN32
		-DSK_FONTHOST_USES_FONTMGR
		-D_CRT_SECURE_NO_WARNINGS
		-DGR_GL_FUNCTION_TYPE=__stdcall)
endif()

if(CMAKE_COMPILER_FAMILY STREQUAL "gcc" OR CMAKE_COMPILER_FAMILY STREQUAL "clang")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -fno-rtti -fno-exceptions")
endif()

set(skia_core_sources
	"${UPSTREAM}/src/c/sk_surface.cpp"
	"${UPSTREAM}/src/c/sk_types_priv.h"
	"${UPSTREAM}/src/core/Sk4px.h"
	"${UPSTREAM}/src/core/SkAAClip.cpp"
	"${UPSTREAM}/src/core/SkAnnotation.cpp"
	"${UPSTREAM}/src/core/SkAdvancedTypefaceMetrics.h"
	"${UPSTREAM}/src/core/SkAlphaRuns.cpp"
	"${UPSTREAM}/src/core/SkAntiRun.h"
	"${UPSTREAM}/src/core/SkATrace.cpp"
	"${UPSTREAM}/src/core/SkATrace.h"
	"${UPSTREAM}/src/core/SkAutoKern.h"
	"${UPSTREAM}/src/core/SkAutoPixmapStorage.h"
	"${UPSTREAM}/src/core/SkAutoPixmapStorage.cpp"
	"${UPSTREAM}/src/core/SkBBHFactory.cpp"
	"${UPSTREAM}/src/core/SkBBoxHierarchy.h"
	"${UPSTREAM}/src/core/SkBigPicture.cpp"
	"${UPSTREAM}/src/core/SkBitmap.cpp"
	"${UPSTREAM}/src/core/SkBitmapCache.cpp"
	"${UPSTREAM}/src/core/SkBitmapController.cpp"
	"${UPSTREAM}/src/core/SkBitmapDevice.cpp"
	"${UPSTREAM}/src/core/SkBitmapDevice.h"
	"${UPSTREAM}/src/core/SkBitmapFilter.h"
	"${UPSTREAM}/src/core/SkBitmapProcShader.cpp"
	"${UPSTREAM}/src/core/SkBitmapProcShader.h"
	"${UPSTREAM}/src/core/SkBitmapProcState.cpp"
	"${UPSTREAM}/src/core/SkBitmapProcState.h"
	"${UPSTREAM}/src/core/SkBitmapProcState_filter.h"
	"${UPSTREAM}/src/core/SkBitmapProcState_matrix.h"
	"${UPSTREAM}/src/core/SkBitmapProcState_matrix_template.h"
	"${UPSTREAM}/src/core/SkBitmapProcState_matrixProcs.cpp"
	"${UPSTREAM}/src/core/SkBitmapProcState_procs.h"
	"${UPSTREAM}/src/core/SkBitmapProcState_sample.h"
	"${UPSTREAM}/src/core/SkBitmapProcState_shaderproc.h"
	"${UPSTREAM}/src/core/SkBitmapProcState_utils.h"
	"${UPSTREAM}/src/core/SkBitmapProvider.cpp"
	"${UPSTREAM}/src/core/SkBitmapProvider.h"
	"${UPSTREAM}/src/core/SkBitmapScaler.h"
	"${UPSTREAM}/src/core/SkBitmapScaler.cpp"
	"${UPSTREAM}/src/core/SkBlitBWMaskTemplate.h"
	"${UPSTREAM}/src/core/SkBlitMask.h"
	"${UPSTREAM}/src/core/SkBlitMask_D32.cpp"
	"${UPSTREAM}/src/core/SkBlitRow.h"
	"${UPSTREAM}/src/core/SkBlitRow_D16.cpp"
	"${UPSTREAM}/src/core/SkBlitRow_D32.cpp"
	"${UPSTREAM}/src/core/SkBlitter.h"
	"${UPSTREAM}/src/core/SkBlitter.cpp"
	"${UPSTREAM}/src/core/SkBlitter_A8.cpp"
	"${UPSTREAM}/src/core/SkBlitter_ARGB32.cpp"
	"${UPSTREAM}/src/core/SkBlitter_PM4f.cpp"
	"${UPSTREAM}/src/core/SkBlitter_RGB16.cpp"
	"${UPSTREAM}/src/core/SkBlitter_Sprite.cpp"
	"${UPSTREAM}/src/core/SkBlurImageFilter.cpp"
	"${UPSTREAM}/src/core/SkBuffer.cpp"
	"${UPSTREAM}/src/core/SkCachedData.cpp"
	"${UPSTREAM}/src/core/SkCanvas.cpp"
	"${UPSTREAM}/src/core/SkCanvasPriv.h"
	"${UPSTREAM}/src/core/SkClipStack.cpp"
	"${UPSTREAM}/src/core/SkClipStack.h"
	"${UPSTREAM}/src/core/SkClipStackDevice.cpp"
	"${UPSTREAM}/src/core/SkClipStackDevice.h"
	"${UPSTREAM}/src/core/SkColor.cpp"
	"${UPSTREAM}/src/core/SkColorFilter.cpp"
	"${UPSTREAM}/src/core/SkColorFilterShader.cpp"
	"${UPSTREAM}/src/core/SkColorLookUpTable.cpp"
	"${UPSTREAM}/src/core/SkColorLookUpTable.h"
	"${UPSTREAM}/src/core/SkColorMatrixFilterRowMajor255.cpp"
	"${UPSTREAM}/src/core/SkColorMatrixFilterRowMajor255.h"
	"${UPSTREAM}/src/core/SkColorShader.cpp"
	"${UPSTREAM}/src/core/SkColorShader.h"
	"${UPSTREAM}/src/core/SkColorSpace.cpp"
	"${UPSTREAM}/src/core/SkColorSpace_A2B.cpp"
	"${UPSTREAM}/src/core/SkColorSpace_A2B.h"
	"${UPSTREAM}/src/core/SkColorSpace_XYZ.cpp"
	"${UPSTREAM}/src/core/SkColorSpace_XYZ.h"
	"${UPSTREAM}/src/core/SkColorSpace_ICC.cpp"
	"${UPSTREAM}/src/core/SkColorSpaceXform.cpp"
	"${UPSTREAM}/src/core/SkColorSpaceXformCanvas.cpp"
	"${UPSTREAM}/src/core/SkColorSpaceXformer.cpp"
	"${UPSTREAM}/src/core/SkColorSpaceXformer.h"
	"${UPSTREAM}/src/core/SkColorSpaceXform_A2B.cpp"
	"${UPSTREAM}/src/core/SkColorSpaceXform_A2B.h"
	"${UPSTREAM}/src/core/SkColorTable.cpp"
	"${UPSTREAM}/src/core/SkComposeShader.cpp"
	"${UPSTREAM}/src/core/SkConvertPixels.cpp"
	"${UPSTREAM}/src/core/SkConvertPixels.h"
	"${UPSTREAM}/src/core/SkConvolver.cpp"
	"${UPSTREAM}/src/core/SkConvolver.h"
	"${UPSTREAM}/src/core/SkCoreBlitters.h"
	"${UPSTREAM}/src/core/SkCpu.cpp"
	"${UPSTREAM}/src/core/SkCpu.h"
	"${UPSTREAM}/src/core/SkCubicClipper.cpp"
	"${UPSTREAM}/src/core/SkCubicClipper.h"
	"${UPSTREAM}/src/core/SkData.cpp"
	"${UPSTREAM}/src/core/SkDataTable.cpp"
	"${UPSTREAM}/src/core/SkDebug.cpp"
	"${UPSTREAM}/src/core/SkDeque.cpp"
	"${UPSTREAM}/src/core/SkDescriptor.h"
	"${UPSTREAM}/src/core/SkDevice.cpp"
	"${UPSTREAM}/src/core/SkDevice.h"
	"${UPSTREAM}/src/core/SkDeviceLooper.cpp"
	"${UPSTREAM}/src/core/SkDeviceProfile.cpp"
	"${UPSTREAM}/src/core/SkDiscardableMemory.h"
	"${UPSTREAM}/src/lazy/SkDiscardableMemoryPool.cpp"
	"${UPSTREAM}/src/core/SkDistanceFieldGen.cpp"
	"${UPSTREAM}/src/core/SkDistanceFieldGen.h"
	"${UPSTREAM}/src/core/SkDither.cpp"
	"${UPSTREAM}/src/core/SkDither.h"
	"${UPSTREAM}/src/core/SkDocument.cpp"
	"${UPSTREAM}/src/core/SkDraw.cpp"
	"${UPSTREAM}/src/core/SkDraw.h"
	"${UPSTREAM}/src/core/SkDrawable.cpp"
	"${UPSTREAM}/src/core/SkDrawLooper.cpp"
	"${UPSTREAM}/src/core/SkDrawProcs.h"
	"${UPSTREAM}/src/core/SkEdgeBuilder.cpp"
	"${UPSTREAM}/src/core/SkEdgeBuilder.h"
	"${UPSTREAM}/src/core/SkEdgeClipper.cpp"
	"${UPSTREAM}/src/core/SkEdgeClipper.h"
	"${UPSTREAM}/src/core/SkEmptyShader.h"
	"${UPSTREAM}/src/core/SkEndian.h"
	"${UPSTREAM}/src/core/SkExecutor.cpp"
	"${UPSTREAM}/src/core/SkAnalyticEdge.cpp"
	"${UPSTREAM}/src/core/SkFDot6Constants.h"
	"${UPSTREAM}/src/core/SkEdge.cpp"
	"${UPSTREAM}/src/core/SkEdge.h"
	"${UPSTREAM}/src/core/SkFDot6.h"
	"${UPSTREAM}/src/core/SkFilterProc.cpp"
	"${UPSTREAM}/src/core/SkFilterProc.h"
	"${UPSTREAM}/src/core/SkFindAndPlaceGlyph.h"
	"${UPSTREAM}/src/core/SkArenaAlloc.cpp"
	"${UPSTREAM}/src/core/SkArenaAlloc.h"
	"${UPSTREAM}/src/core/SkFlattenable.cpp"
	"${UPSTREAM}/src/core/SkFlattenableSerialization.cpp"
	"${UPSTREAM}/src/core/SkFont.cpp"
	"${UPSTREAM}/src/core/SkFontLCDConfig.cpp"
	"${UPSTREAM}/src/core/SkFontMgr.cpp"
	"${UPSTREAM}/src/core/SkFontStyle.cpp"
	"${UPSTREAM}/src/core/SkFontDescriptor.cpp"
	"${UPSTREAM}/src/core/SkFontDescriptor.h"
	"${UPSTREAM}/src/core/SkFontStream.cpp"
	"${UPSTREAM}/src/core/SkFontStream.h"
	"${UPSTREAM}/src/core/SkFuzzLogging.h"
	"${UPSTREAM}/src/core/SkGeometry.cpp"
	"${UPSTREAM}/src/core/SkGeometry.h"
	"${UPSTREAM}/src/core/SkGlobalInitialization_core.cpp"
	"${UPSTREAM}/src/core/SkGlyph.h"
	"${UPSTREAM}/src/core/SkGlyphCache.cpp"
	"${UPSTREAM}/src/core/SkGlyphCache.h"
	"${UPSTREAM}/src/core/SkGlyphCache_Globals.h"
	"${UPSTREAM}/src/core/SkGpuBlurUtils.h"
	"${UPSTREAM}/src/core/SkGpuBlurUtils.cpp"
	"${UPSTREAM}/src/core/SkGraphics.cpp"
	"${UPSTREAM}/src/core/SkHalf.cpp"
	"${UPSTREAM}/src/core/SkHalf.h"
	"${UPSTREAM}/src/core/SkICC.cpp"
	"${UPSTREAM}/src/core/SkImageFilter.cpp"
	"${UPSTREAM}/src/core/SkImageFilterCache.cpp"
	"${UPSTREAM}/src/core/SkImageFilterCache.h"
	"${UPSTREAM}/src/core/SkImageInfo.cpp"
	"${UPSTREAM}/src/core/SkImageCacherator.h"
	"${UPSTREAM}/src/core/SkImageCacherator.cpp"
	"${UPSTREAM}/src/core/SkImageGenerator.cpp"
	"${UPSTREAM}/src/core/SkLightingShader.h"
	"${UPSTREAM}/src/core/SkLightingShader.cpp"
	"${UPSTREAM}/src/core/SkLights.cpp"
	"${UPSTREAM}/src/core/SkLinearBitmapPipeline.cpp"
	"${UPSTREAM}/src/core/SkLinearBitmapPipeline.h"
	"${UPSTREAM}/src/core/SkLinearBitmapPipeline_core.h"
	"${UPSTREAM}/src/core/SkLinearBitmapPipeline_matrix.h"
	"${UPSTREAM}/src/core/SkLinearBitmapPipeline_tile.h"
	"${UPSTREAM}/src/core/SkLinearBitmapPipeline_sample.h"
	"${UPSTREAM}/src/core/SkLineClipper.cpp"
	"${UPSTREAM}/src/core/SkLiteDL.cpp"
	"${UPSTREAM}/src/core/SkLiteRecorder.cpp"
	"${UPSTREAM}/src/core/SkLocalMatrixImageFilter.cpp"
	"${UPSTREAM}/src/core/SkLocalMatrixImageFilter.h"
	"${UPSTREAM}/src/core/SkLocalMatrixShader.cpp"
	"${UPSTREAM}/src/core/SkMD5.cpp"
	"${UPSTREAM}/src/core/SkMD5.h"
	"${UPSTREAM}/src/core/SkMallocPixelRef.cpp"
	"${UPSTREAM}/src/core/SkMask.cpp"
	"${UPSTREAM}/src/core/SkMaskCache.cpp"
	"${UPSTREAM}/src/core/SkMaskFilter.cpp"
	"${UPSTREAM}/src/core/SkMaskGamma.cpp"
	"${UPSTREAM}/src/core/SkMaskGamma.h"
	"${UPSTREAM}/src/core/SkMath.cpp"
	"${UPSTREAM}/src/core/SkMathPriv.h"
	"${UPSTREAM}/src/core/SkMatrix.cpp"
	"${UPSTREAM}/src/core/SkMatrix44.cpp"
	"${UPSTREAM}/src/core/SkMatrixImageFilter.cpp"
	"${UPSTREAM}/src/core/SkMatrixImageFilter.h"
	"${UPSTREAM}/src/core/SkMatrixUtils.h"
	"${UPSTREAM}/src/core/SkMetaData.cpp"
	"${UPSTREAM}/src/core/SkMipMap.cpp"
	"${UPSTREAM}/src/core/SkMipMap.h"
	"${UPSTREAM}/src/core/SkMiniRecorder.cpp"
	"${UPSTREAM}/src/core/SkModeColorFilter.cpp"
	"${UPSTREAM}/src/core/SkMultiPictureDraw.cpp"
	"${UPSTREAM}/src/core/SkNextID.h"
	"${UPSTREAM}/src/core/SkLatticeIter.cpp"
	"${UPSTREAM}/src/core/SkLatticeIter.h"
	"${UPSTREAM}/src/core/SkNormalBevelSource.cpp"
	"${UPSTREAM}/src/core/SkNormalBevelSource.h"
	"${UPSTREAM}/src/core/SkNormalMapSource.cpp"
	"${UPSTREAM}/src/core/SkNormalMapSource.h"
	"${UPSTREAM}/src/core/SkNormalFlatSource.cpp"
	"${UPSTREAM}/src/core/SkNormalFlatSource.h"
	"${UPSTREAM}/src/core/SkNormalSource.cpp"
	"${UPSTREAM}/src/core/SkNormalSource.h"
	"${UPSTREAM}/src/core/SkNormalSourcePriv.h"
	"${UPSTREAM}/src/core/SkNx.h"
	"${UPSTREAM}/src/core/SkOpts.cpp"
	"${UPSTREAM}/src/core/SkOpts.h"
	"${UPSTREAM}/src/core/SkOrderedReadBuffer.h"
	"${UPSTREAM}/src/core/SkOSFile.h"
	"${UPSTREAM}/src/core/SkOverdrawCanvas.cpp"
	"${UPSTREAM}/src/core/SkOverdrawCanvas.h"
	"${UPSTREAM}/src/core/SkPaint.cpp"
	"${UPSTREAM}/src/core/SkPaintDefaults.h"
	"${UPSTREAM}/src/core/SkPaintPriv.cpp"
	"${UPSTREAM}/src/core/SkPaintPriv.h"
	"${UPSTREAM}/src/core/SkPath.cpp"
	"${UPSTREAM}/src/core/SkPathEffect.cpp"
	"${UPSTREAM}/src/core/SkPathMeasure.cpp"
	"${UPSTREAM}/src/core/SkPathPriv.h"
	"${UPSTREAM}/src/core/SkPathRef.cpp"
	"${UPSTREAM}/src/core/SkPerspIter.h"
	"${UPSTREAM}/src/core/SkPicture.cpp"
	"${UPSTREAM}/src/core/SkPictureAnalyzer.cpp"
	"${UPSTREAM}/src/core/SkPictureCommon.h"
	"${UPSTREAM}/src/core/SkPictureContentInfo.cpp"
	"${UPSTREAM}/src/core/SkPictureContentInfo.h"
	"${UPSTREAM}/src/core/SkPictureData.cpp"
	"${UPSTREAM}/src/core/SkPictureData.h"
	"${UPSTREAM}/src/core/SkPictureFlat.cpp"
	"${UPSTREAM}/src/core/SkPictureFlat.h"
	"${UPSTREAM}/src/core/SkPictureImageGenerator.cpp"
	"${UPSTREAM}/src/core/SkPicturePlayback.cpp"
	"${UPSTREAM}/src/core/SkPicturePlayback.h"
	"${UPSTREAM}/src/core/SkPictureRecord.cpp"
	"${UPSTREAM}/src/core/SkPictureRecord.h"
	"${UPSTREAM}/src/core/SkPictureRecorder.cpp"
	"${UPSTREAM}/src/core/SkPictureShader.cpp"
	"${UPSTREAM}/src/core/SkPictureShader.h"
	"${UPSTREAM}/src/core/SkPixelRef.cpp"
	"${UPSTREAM}/src/core/SkPixmap.cpp"
	"${UPSTREAM}/src/core/SkPoint.cpp"
	"${UPSTREAM}/src/core/SkPoint3.cpp"
	"${UPSTREAM}/src/core/SkPtrRecorder.cpp"
	"${UPSTREAM}/src/core/SkQuadClipper.cpp"
	"${UPSTREAM}/src/core/SkQuadClipper.h"
	"${UPSTREAM}/src/core/SkRadialShadowMapShader.cpp"
	"${UPSTREAM}/src/core/SkRadialShadowMapShader.h"
	"${UPSTREAM}/src/core/SkRasterClip.cpp"
	"${UPSTREAM}/src/core/SkRasterPipeline.cpp"
	"${UPSTREAM}/src/core/SkRasterPipelineBlitter.cpp"
	"${UPSTREAM}/src/core/SkRasterizer.cpp"
	"${UPSTREAM}/src/core/SkReadBuffer.h"
	"${UPSTREAM}/src/core/SkReadBuffer.cpp"
	"${UPSTREAM}/src/core/SkReader32.h"
	"${UPSTREAM}/src/core/SkRecord.cpp"
	"${UPSTREAM}/src/core/SkRecords.cpp"
	"${UPSTREAM}/src/core/SkRecordDraw.cpp"
	"${UPSTREAM}/src/core/SkRecordOpts.cpp"
	"${UPSTREAM}/src/core/SkRecordOpts.h"
	"${UPSTREAM}/src/core/SkRecordPattern.h"
	"${UPSTREAM}/src/core/SkRecordedDrawable.cpp"
	"${UPSTREAM}/src/core/SkRecorder.cpp"
	"${UPSTREAM}/src/core/SkRect.cpp"
	"${UPSTREAM}/src/core/SkRefDict.cpp"
	"${UPSTREAM}/src/core/SkRegion.cpp"
	"${UPSTREAM}/src/core/SkRegionPriv.h"
	"${UPSTREAM}/src/core/SkRegion_path.cpp"
	"${UPSTREAM}/src/core/SkResourceCache.cpp"
	"${UPSTREAM}/src/core/SkRRect.cpp"
	"${UPSTREAM}/src/core/SkRTree.h"
	"${UPSTREAM}/src/core/SkRTree.cpp"
	"${UPSTREAM}/src/core/SkRWBuffer.cpp"
	"${UPSTREAM}/src/core/SkScalar.cpp"
	"${UPSTREAM}/src/core/SkScalerContext.cpp"
	"${UPSTREAM}/src/core/SkScalerContext.h"
	"${UPSTREAM}/src/core/SkScan.cpp"
	"${UPSTREAM}/src/core/SkScan.h"
	"${UPSTREAM}/src/core/SkScanPriv.h"
	"${UPSTREAM}/src/core/SkScan_AAAPath.cpp"
	"${UPSTREAM}/src/core/SkScan_AntiPath.cpp"
	"${UPSTREAM}/src/core/SkScan_Antihair.cpp"
	"${UPSTREAM}/src/core/SkScan_Hairline.cpp"
	"${UPSTREAM}/src/core/SkScan_Path.cpp"
	"${UPSTREAM}/src/core/SkSemaphore.cpp"
	"${UPSTREAM}/src/core/SkShader.cpp"
	"${UPSTREAM}/src/core/SkSharedMutex.cpp"
	"${UPSTREAM}/src/core/SkSharedMutex.h"
	"${UPSTREAM}/src/core/SkSinglyLinkedList.h"
	"${UPSTREAM}/src/core/SkSpanProcs.cpp"
	"${UPSTREAM}/src/core/SkSpecialImage.cpp"
	"${UPSTREAM}/src/core/SkSpecialImage.h"
	"${UPSTREAM}/src/core/SkSpecialSurface.cpp"
	"${UPSTREAM}/src/core/SkSpecialSurface.h"
	"${UPSTREAM}/src/core/SkSpinlock.cpp"
	"${UPSTREAM}/src/core/SkSpriteBlitter_ARGB32.cpp"
	"${UPSTREAM}/src/core/SkSpriteBlitter_RGB16.cpp"
	"${UPSTREAM}/src/core/SkSpriteBlitter.h"
	"${UPSTREAM}/src/core/SkSpriteBlitterTemplate.h"
	"${UPSTREAM}/src/core/SkSpriteBlitter4f.cpp"
	"${UPSTREAM}/src/core/SkStream.cpp"
	"${UPSTREAM}/src/core/SkStreamPriv.h"
	"${UPSTREAM}/src/core/SkString.cpp"
	"${UPSTREAM}/src/core/SkStringUtils.cpp"
	"${UPSTREAM}/src/core/SkStroke.h"
	"${UPSTREAM}/src/core/SkStroke.cpp"
	"${UPSTREAM}/src/core/SkStrokeRec.cpp"
	"${UPSTREAM}/src/core/SkStrokerPriv.cpp"
	"${UPSTREAM}/src/core/SkStrokerPriv.h"
	"${UPSTREAM}/src/core/SkSurfacePriv.h"
	"${UPSTREAM}/src/core/SkSwizzle.cpp"
	"${UPSTREAM}/src/core/SkSRGB.cpp"
	"${UPSTREAM}/src/core/SkTaskGroup.cpp"
	"${UPSTREAM}/src/core/SkTaskGroup.h"
	"${UPSTREAM}/src/core/SkTDPQueue.h"
	"${UPSTREAM}/src/core/SkTDynamicHash.h"
	"${UPSTREAM}/src/core/SkTInternalLList.h"
	"${UPSTREAM}/src/core/SkTextBlob.cpp"
	"${UPSTREAM}/src/core/SkTextFormatParams.h"
	"${UPSTREAM}/src/core/SkTextMapStateProc.h"
	"${UPSTREAM}/src/core/SkTextToPathIter.h"
	"${UPSTREAM}/src/core/SkTime.cpp"
	"${UPSTREAM}/src/core/SkTDPQueue.h"
	"${UPSTREAM}/src/core/SkThreadID.cpp"
	"${UPSTREAM}/src/core/SkTLList.h"
	"${UPSTREAM}/src/core/SkTLS.cpp"
	"${UPSTREAM}/src/core/SkTMultiMap.h"
	"${UPSTREAM}/src/core/SkTraceEvent.h"
	"${UPSTREAM}/src/core/SkTraceEventCommon.h"
	"${UPSTREAM}/src/core/SkTSearch.cpp"
	"${UPSTREAM}/src/core/SkTSort.h"
	"${UPSTREAM}/src/core/SkTTopoSort.h"
	"${UPSTREAM}/src/core/SkTypeface.cpp"
	"${UPSTREAM}/src/core/SkTypefaceCache.cpp"
	"${UPSTREAM}/src/core/SkTypefaceCache.h"
	"${UPSTREAM}/src/core/SkTypefacePriv.h"
	"${UPSTREAM}/src/core/SkUnPreMultiply.cpp"
	"${UPSTREAM}/src/core/SkUtils.cpp"
	"${UPSTREAM}/src/core/SkUtils.h"
	"${UPSTREAM}/src/core/SkValidatingReadBuffer.cpp"
	"${UPSTREAM}/src/core/SkValidatingReadBuffer.h"
	"${UPSTREAM}/src/core/SkValidationUtils.h"
	"${UPSTREAM}/src/core/SkVarAlloc.cpp"
	"${UPSTREAM}/src/core/SkVertices.cpp"
	"${UPSTREAM}/src/core/SkVertState.cpp"
	"${UPSTREAM}/src/core/SkWriteBuffer.cpp"
	"${UPSTREAM}/src/core/SkWriter32.cpp"
	"${UPSTREAM}/src/core/SkXfermode.cpp"
	"${UPSTREAM}/src/core/SkXfermode4f.cpp"
	"${UPSTREAM}/src/core/SkXfermodeF16.cpp"
	"${UPSTREAM}/src/core/SkXfermode_proccoeff.h"
	"${UPSTREAM}/src/core/SkXfermodeInterpretation.cpp"
	"${UPSTREAM}/src/core/SkXfermodeInterpretation.h"
	"${UPSTREAM}/src/core/SkYUVPlanesCache.cpp"
	"${UPSTREAM}/src/core/SkYUVPlanesCache.h"
	"${UPSTREAM}/src/core/SkShadowShader.cpp"
	"${UPSTREAM}/src/core/SkShadowShader.h"
	"${UPSTREAM}/src/image/SkImage.cpp"
	"${UPSTREAM}/src/image/SkImage_Generator.cpp"
	"${UPSTREAM}/src/image/SkImage_Raster.cpp"
	"${UPSTREAM}/src/image/SkImageShader.cpp"
	"${UPSTREAM}/src/image/SkImageShader.h"
	"${UPSTREAM}/src/image/SkSurface.cpp"
	"${UPSTREAM}/src/image/SkSurface_Base.h"
	"${UPSTREAM}/src/image/SkSurface_Raster.cpp"
	"${UPSTREAM}/src/pipe/SkPipeCanvas.cpp"
	"${UPSTREAM}/src/pipe/SkPipeReader.cpp"
	"${UPSTREAM}/include/core/SkBBHFactory.h"
	"${UPSTREAM}/include/core/SkBitmap.h"
	"${UPSTREAM}/include/core/SkCanvas.h"
	"${UPSTREAM}/include/core/SkColor.h"
	"${UPSTREAM}/include/core/SkColorFilter.h"
	"${UPSTREAM}/include/core/SkColorPriv.h"
	"${UPSTREAM}/include/core/SkCrossContextImageData.h"
	"${UPSTREAM}/include/core/SkData.h"
	"${UPSTREAM}/include/core/SkDeque.h"
	"${UPSTREAM}/include/core/SkDrawable.h"
	"${UPSTREAM}/include/core/SkDrawFilter.h"
	"${UPSTREAM}/include/core/SkDrawLooper.h"
	"${UPSTREAM}/include/core/SkFlattenable.h"
	"${UPSTREAM}/include/core/SkFlattenableSerialization.h"
	"${UPSTREAM}/include/core/SkFontArguments.h"
	"${UPSTREAM}/include/core/SkFontLCDConfig.h"
	"${UPSTREAM}/include/core/SkFontStyle.h"
	"${UPSTREAM}/include/core/SkGraphics.h"
	"${UPSTREAM}/include/core/SkImage.h"
	"${UPSTREAM}/include/core/SkImageEncoder.h"
	"${UPSTREAM}/include/core/SkImageFilter.h"
	"${UPSTREAM}/include/core/SkImageInfo.h"
	"${UPSTREAM}/include/core/SkLights.h"
	"${UPSTREAM}/include/core/SkMallocPixelRef.h"
	"${UPSTREAM}/include/core/SkMask.h"
	"${UPSTREAM}/include/core/SkMaskFilter.h"
	"${UPSTREAM}/include/core/SkMath.h"
	"${UPSTREAM}/include/core/SkMatrix.h"
	"${UPSTREAM}/include/core/SkMatrix44.h"
	"${UPSTREAM}/include/core/SkMetaData.h"
	"${UPSTREAM}/include/core/SkMultiPictureDraw.h"
	"${UPSTREAM}/include/core/SkPaint.h"
	"${UPSTREAM}/include/core/SkPath.h"
	"${UPSTREAM}/include/core/SkPathEffect.h"
	"${UPSTREAM}/include/core/SkPathMeasure.h"
	"${UPSTREAM}/include/core/SkPathRef.h"
	"${UPSTREAM}/include/core/SkPicture.h"
	"${UPSTREAM}/include/core/SkPictureAnalyzer.h"
	"${UPSTREAM}/include/core/SkPictureRecorder.h"
	"${UPSTREAM}/include/core/SkPixelRef.h"
	"${UPSTREAM}/include/core/SkPoint.h"
	"${UPSTREAM}/include/core/SkPoint3.h"
	"${UPSTREAM}/include/core/SkPreConfig.h"
	"${UPSTREAM}/include/core/SkRasterizer.h"
	"${UPSTREAM}/include/core/SkRect.h"
	"${UPSTREAM}/include/core/SkRefCnt.h"
	"${UPSTREAM}/include/core/SkRegion.h"
	"${UPSTREAM}/include/core/SkRRect.h"
	"${UPSTREAM}/include/core/SkScalar.h"
	"${UPSTREAM}/include/core/SkShader.h"
	"${UPSTREAM}/include/core/SkStream.h"
	"${UPSTREAM}/include/core/SkString.h"
	"${UPSTREAM}/include/core/SkStrokeRec.h"
	"${UPSTREAM}/include/core/SkSurface.h"
	"${UPSTREAM}/include/core/SkSwizzle.h"
	"${UPSTREAM}/include/core/SkTextBlob.h"
	"${UPSTREAM}/include/core/SkTime.h"
	"${UPSTREAM}/include/core/SkTLazy.h"
	"${UPSTREAM}/include/core/SkTypeface.h"
	"${UPSTREAM}/include/core/SkTypes.h"
	"${UPSTREAM}/include/core/SkUnPreMultiply.h"
	"${UPSTREAM}/include/core/SkVertices.h"
	"${UPSTREAM}/include/core/SkWriter32.h"
	# privat
	"${UPSTREAM}/include/private/SkAtomics.h"
	"${UPSTREAM}/include/private/SkChecksum.h"
	"${UPSTREAM}/include/private/SkFixed.h"
	"${UPSTREAM}/include/private/SkFloatBits.h"
	"${UPSTREAM}/include/private/SkFloatingPoint.h"
	"${UPSTREAM}/include/private/SkMalloc.h"
	"${UPSTREAM}/include/private/SkMessageBus.h"
	"${UPSTREAM}/include/private/SkMiniRecorder.h"
	"${UPSTREAM}/include/private/SkMutex.h"
	"${UPSTREAM}/include/private/SkOnce.h"
	"${UPSTREAM}/include/private/SkRecords.h"
	"${UPSTREAM}/include/private/SkSemaphore.h"
	"${UPSTREAM}/include/private/SkShadowFlags.h"
	"${UPSTREAM}/include/private/SkShadowParams.h"
	"${UPSTREAM}/include/private/SkSpinlock.h"
	"${UPSTREAM}/include/private/SkTemplates.h"
	"${UPSTREAM}/include/private/SkTArray.h"
	"${UPSTREAM}/include/private/SkTDArray.h"
	"${UPSTREAM}/include/private/SkTFitsIn.h"
	"${UPSTREAM}/include/private/SkTHash.h"
	"${UPSTREAM}/include/private/SkThreadID.h"
	"${UPSTREAM}/include/private/SkTSearch.h"
	"${UPSTREAM}/include/private/SkTLogic.h"
	"${UPSTREAM}/include/private/SkWeakRefCnt.h"
	# pathops
	"${UPSTREAM}/include/pathops/SkPathOps.h"
	"${UPSTREAM}/src/pathops/SkAddIntersections.cpp"
	"${UPSTREAM}/src/pathops/SkDConicLineIntersection.cpp"
	"${UPSTREAM}/src/pathops/SkDCubicLineIntersection.cpp"
	"${UPSTREAM}/src/pathops/SkDCubicToQuads.cpp"
	"${UPSTREAM}/src/pathops/SkDLineIntersection.cpp"
	"${UPSTREAM}/src/pathops/SkDQuadLineIntersection.cpp"
	"${UPSTREAM}/src/pathops/SkIntersections.cpp"
	"${UPSTREAM}/src/pathops/SkOpAngle.cpp"
	"${UPSTREAM}/src/pathops/SkOpBuilder.cpp"
	"${UPSTREAM}/src/pathops/SkOpCoincidence.cpp"
	"${UPSTREAM}/src/pathops/SkOpContour.cpp"
	"${UPSTREAM}/src/pathops/SkOpCubicHull.cpp"
	"${UPSTREAM}/src/pathops/SkOpEdgeBuilder.cpp"
	"${UPSTREAM}/src/pathops/SkOpSegment.cpp"
	"${UPSTREAM}/src/pathops/SkOpSpan.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsCommon.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsConic.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsCubic.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsCurve.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsDebug.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsLine.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsOp.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsPoint.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsQuad.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsRect.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsSimplify.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsTSect.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsTightBounds.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsTypes.cpp"
	"${UPSTREAM}/src/pathops/SkPathOpsWinding.cpp"
	"${UPSTREAM}/src/pathops/SkPathWriter.cpp"
	"${UPSTREAM}/src/pathops/SkReduceOrder.cpp"
	"${UPSTREAM}/src/pathops/SkAddIntersections.h"
	"${UPSTREAM}/src/pathops/SkIntersectionHelper.h"
	"${UPSTREAM}/src/pathops/SkIntersections.h"
	"${UPSTREAM}/src/pathops/SkLineParameters.h"
	"${UPSTREAM}/src/pathops/SkOpAngle.h"
	"${UPSTREAM}/src/pathops/SkOpCoincidence.h"
	"${UPSTREAM}/src/pathops/SkOpContour.h"
	"${UPSTREAM}/src/pathops/SkOpEdgeBuilder.h"
	"${UPSTREAM}/src/pathops/SkOpSegment.h"
	"${UPSTREAM}/src/pathops/SkOpSpan.h"
	"${UPSTREAM}/src/pathops/SkOpTAllocator.h"
	"${UPSTREAM}/src/pathops/SkPathOpsBounds.h"
	"${UPSTREAM}/src/pathops/SkPathOpsCommon.h"
	"${UPSTREAM}/src/pathops/SkPathOpsConic.h"
	"${UPSTREAM}/src/pathops/SkPathOpsCubic.h"
	"${UPSTREAM}/src/pathops/SkPathOpsCurve.h"
	"${UPSTREAM}/src/pathops/SkPathOpsDebug.h"
	"${UPSTREAM}/src/pathops/SkPathOpsLine.h"
	"${UPSTREAM}/src/pathops/SkPathOpsPoint.h"
	"${UPSTREAM}/src/pathops/SkPathOpsQuad.h"
	"${UPSTREAM}/src/pathops/SkPathOpsRect.h"
	"${UPSTREAM}/src/pathops/SkPathOpsTSect.h"
	"${UPSTREAM}/src/pathops/SkPathOpsTypes.h"
	"${UPSTREAM}/src/pathops/SkPathWriter.h"
	"${UPSTREAM}/src/pathops/SkReduceOrder.h"
)

set(skia_utils_sources
  "${UPSTREAM}/include/utils/SkFrontBufferedStream.h"
  "${UPSTREAM}/include/utils/SkCamera.h"
  "${UPSTREAM}/include/utils/SkCanvasStateUtils.h"
  "${UPSTREAM}/include/utils/SkDumpCanvas.h"
  "${UPSTREAM}/include/utils/SkEventTracer.h"
  "${UPSTREAM}/include/utils/SkInterpolator.h"
  "${UPSTREAM}/include/utils/SkNoDrawCanvas.h"
  "${UPSTREAM}/include/utils/SkNWayCanvas.h"
  "${UPSTREAM}/include/utils/SkNullCanvas.h"
  "${UPSTREAM}/include/utils/SkPaintFilterCanvas.h"
  "${UPSTREAM}/include/utils/SkParse.h"
  "${UPSTREAM}/include/utils/SkParsePath.h"
  "${UPSTREAM}/include/utils/SkRandom.h"
  "${UPSTREAM}/include/utils/SkShadowUtils.h"
  "${UPSTREAM}/include/utils/SkTextBox.h"
  "${UPSTREAM}/src/utils/SkBase64.cpp"
  "${UPSTREAM}/src/utils/SkBase64.h"
  "${UPSTREAM}/src/utils/SkBitmapSourceDeserializer.cpp"
  "${UPSTREAM}/src/utils/SkBitmapSourceDeserializer.h"
  "${UPSTREAM}/src/utils/SkBitSet.h"
  "${UPSTREAM}/src/utils/SkFrontBufferedStream.cpp"
  "${UPSTREAM}/src/utils/SkCamera.cpp"
  "${UPSTREAM}/src/utils/SkCanvasStack.h"
  "${UPSTREAM}/src/utils/SkCanvasStack.cpp"
  "${UPSTREAM}/src/utils/SkCanvasStateUtils.cpp"
  "${UPSTREAM}/src/utils/SkCurveMeasure.cpp"
  "${UPSTREAM}/src/utils/SkCurveMeasure.h"
  "${UPSTREAM}/src/utils/SkDashPath.cpp"
  "${UPSTREAM}/src/utils/SkDashPathPriv.h"
  "${UPSTREAM}/src/utils/SkDeferredCanvas.cpp"
  "${UPSTREAM}/src/utils/SkDumpCanvas.cpp"
  "${UPSTREAM}/src/utils/SkEventTracer.cpp"
  "${UPSTREAM}/src/utils/SkFloatUtils.h"
  "${UPSTREAM}/src/utils/SkInsetConvexPolygon.cpp"
  "${UPSTREAM}/src/utils/SkInsetConvexPolygon.h"
  "${UPSTREAM}/src/utils/SkInterpolator.cpp"
  "${UPSTREAM}/src/utils/SkMatrix22.cpp"
  "${UPSTREAM}/src/utils/SkMatrix22.h"
  "${UPSTREAM}/src/utils/SkMultiPictureDocument.cpp"
  "${UPSTREAM}/src/utils/SkNWayCanvas.cpp"
  "${UPSTREAM}/src/utils/SkNullCanvas.cpp"
  "${UPSTREAM}/src/utils/SkOSPath.cpp"
  "${UPSTREAM}/src/utils/SkOSPath.h"
  "${UPSTREAM}/src/utils/SkPaintFilterCanvas.cpp"
  "${UPSTREAM}/src/utils/SkParse.cpp"
  "${UPSTREAM}/src/utils/SkParseColor.cpp"
  "${UPSTREAM}/src/utils/SkParsePath.cpp"
  "${UPSTREAM}/src/utils/SkPatchUtils.cpp"
  "${UPSTREAM}/src/utils/SkPatchUtils.h"
  "${UPSTREAM}/src/utils/SkRGBAToYUV.cpp"
  "${UPSTREAM}/src/utils/SkRGBAToYUV.h"
  "${UPSTREAM}/src/utils/SkShadowPaintFilterCanvas.cpp"
  "${UPSTREAM}/src/utils/SkShadowPaintFilterCanvas.h"
  "${UPSTREAM}/src/utils/SkShadowTessellator.cpp"
  "${UPSTREAM}/src/utils/SkShadowTessellator.h"
  "${UPSTREAM}/src/utils/SkShadowUtils.cpp"
  "${UPSTREAM}/src/utils/SkTextBox.cpp"
  "${UPSTREAM}/src/utils/SkThreadUtils.h"
  "${UPSTREAM}/src/utils/SkThreadUtils_pthread.cpp"
  "${UPSTREAM}/src/utils/SkThreadUtils_pthread.h"
  "${UPSTREAM}/src/utils/SkThreadUtils_win.cpp"
  "${UPSTREAM}/src/utils/SkThreadUtils_win.h"
  "${UPSTREAM}/src/utils/SkWhitelistTypefaces.cpp"

  #mac
  "${UPSTREAM}/include/utils/mac/SkCGUtils.h"
  "${UPSTREAM}/src/utils/mac/SkCreateCGImageRef.cpp"

  #windows
  "${UPSTREAM}/src/utils/win/SkAutoCoInitialize.h"
  "${UPSTREAM}/src/utils/win/SkAutoCoInitialize.cpp"
  "${UPSTREAM}/src/utils/win/SkDWrite.h"
  "${UPSTREAM}/src/utils/win/SkDWrite.cpp"
  "${UPSTREAM}/src/utils/win/SkDWriteFontFileStream.cpp"
  "${UPSTREAM}/src/utils/win/SkDWriteFontFileStream.h"
  "${UPSTREAM}/src/utils/win/SkDWriteGeometrySink.cpp"
  "${UPSTREAM}/src/utils/win/SkDWriteGeometrySink.h"
  "${UPSTREAM}/src/utils/win/SkHRESULT.h"
  "${UPSTREAM}/src/utils/win/SkHRESULT.cpp"
  "${UPSTREAM}/src/utils/win/SkIStream.h"
  "${UPSTREAM}/src/utils/win/SkIStream.cpp"
  "${UPSTREAM}/src/utils/win/SkTScopedComPtr.h"
  "${UPSTREAM}/src/utils/win/SkWGL.h"
  "${UPSTREAM}/src/utils/win/SkWGL_win.cpp"

  #testing
  "${UPSTREAM}/src/fonts/SkGScalerContext.cpp"
  "${UPSTREAM}/src/fonts/SkGScalerContext.h"
  "${UPSTREAM}/src/fonts/SkRandomScalerContext.cpp"
  "${UPSTREAM}/src/fonts/SkRandomScalerContext.h"
  "${UPSTREAM}/src/fonts/SkTestScalerContext.cpp"
  "${UPSTREAM}/src/fonts/SkTestScalerContext.h"
)

add_library(skia_osmand STATIC

  	${skia_core_sources}
  	${skia_utils_sources}

    "${UPSTREAM}/src/android/SkBitmapRegionCodec.cpp"
    "${UPSTREAM}/src/android/SkBitmapRegionDecoder.cpp"
    "${UPSTREAM}/src/codec/SkAndroidCodec.cpp"
    "${UPSTREAM}/src/codec/SkBmpCodec.cpp"
    "${UPSTREAM}/src/codec/SkBmpMaskCodec.cpp"
    "${UPSTREAM}/src/codec/SkBmpRLECodec.cpp"
    "${UPSTREAM}/src/codec/SkBmpStandardCodec.cpp"
    "${UPSTREAM}/src/codec/SkCodec.cpp"
    "${UPSTREAM}/src/codec/SkCodecImageGenerator.cpp"
    "${UPSTREAM}/src/codec/SkGifCodec.cpp"
    "${UPSTREAM}/src/codec/SkMaskSwizzler.cpp"
    "${UPSTREAM}/src/codec/SkMasks.cpp"
    "${UPSTREAM}/src/codec/SkSampledCodec.cpp"
    "${UPSTREAM}/src/codec/SkSampler.cpp"
    "${UPSTREAM}/src/codec/SkStreamBuffer.cpp"
    "${UPSTREAM}/src/codec/SkSwizzler.cpp"
    "${UPSTREAM}/src/codec/SkWbmpCodec.cpp"
    "${UPSTREAM}/src/images/SkImageEncoder.cpp"
    "${UPSTREAM}/src/ports/SkDiscardableMemory_none.cpp"
    "${UPSTREAM}/src/ports/SkImageGenerator_skia.cpp"
    "${UPSTREAM}/src/ports/SkMemory_malloc.cpp"
    "${UPSTREAM}/src/ports/SkOSFile_stdio.cpp"
    "${UPSTREAM}/src/sfnt/SkOTTable_name.cpp"
    "${UPSTREAM}/src/sfnt/SkOTUtils.cpp"
    "${UPSTREAM}/src/utils/mac/SkStream_mac.cpp"
    "${UPSTREAM}/third_party/etc1/etc1.cpp"
    "${UPSTREAM}/third_party/gif/SkGifImageReader.cpp"

	${t${UPSTREAM}/arget_specific_sources}
)

target_link_libraries(skia_osmand LINK_PUBLIC
	expat_osmand
	freetype2_osmand
	#harfbuzz_osmand
	png_osmand
	#gif_osmand
	jpeg_osmand
)
	
if(CMAKE_TARGET_OS STREQUAL "linux")
	find_library(FONTCONFIG_LIBRARY fontconfig)
	target_link_libraries(skia_osmand LINK_PUBLIC
		pthread
		${FONTCONFIG_LIBRARY}
	)
endif()
if(CMAKE_TARGET_OS STREQUAL "darwin")
   	find_library(CORE_FOUNDATION_LIBRARY CoreFoundation)
        find_library(CORE_TEXT_LIBRARY CoreText)
        find_library(CORE_GRAPHICS_LIBRARY CoreGraphics)
        find_library(FONTCONFIG_LIBRARY fontconfig)
        target_link_libraries(skia_osmand LINK_PUBLIC
                pthread
                ${FONTCONFIG_LIBRARY}
                "${CORE_FOUNDATION_LIBRARY}/CoreFoundation"
                "${CORE_TEXT_LIBRARY}/CoreText"
                "${CORE_GRAPHICS_LIBRARY}/CoreGraphics"
 
        )
endif()
if(CMAKE_TARGET_OS STREQUAL "windows")
	target_link_libraries(skia_osmand LINK_PUBLIC
		usp10
	)
endif()
